--- a/index.css
+++ b/index.css
@@ -84,6 +84,7 @@ li, a, button {
   text-decoration: none;
 }
 
+
 .logo0 {
   cursor: pointer;
   margin-right: auto;
@@ -144,6 +145,8 @@ button {
   cursor: pointer;
   transition: all 0.3s ease 0s;
   outline: none;
+  display: block;
+  margin: auto;
 }
 
 button:hover {
@@ -151,11 +154,6 @@ button:hover {
   color: rgba(2.4,41.6,55.3,1);
 }
 
-/*@media (max-width: 500px) {
-cta {
-  display: block;
-  margin: auto;
-}*/
 
 h1 {
   font-size: 2.5rem;
@@ -245,8 +243,23 @@ h4 {
   justify-content: space-between;
 }
 
+@media (max-width: 500px) {
+  .foot {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+  }
+}
+
 .cont {
   padding: 40px 75px 0px 0px;
+}
+
+@media (max-width: 500px) {
+  .cont {
+    text-align: center;
+    padding: 40px 0px 0px 0px;
+  }
 }
 
 .stay {
@@ -266,6 +279,14 @@ h4 {
 }
 
 @media (max-width: 500px) {
+  .social{
+    display: block;
+    margin-right: auto;
+    margin-left: auto;
+  }
+}
+
+@media (max-width: 500px) {
   .logo {
     display: none;
   }
@@ -273,6 +294,14 @@ h4 {
 
 .logo2 {
   padding: 0px 6%;
+}
+
+@media (max-width: 500px) {
+  .logo2 {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+  }
 }
 
 .footlinks{
@@ -315,6 +344,7 @@ font-size: 1.5rem;
   display: block;
   margin-left: auto;
   margin-right: auto;
+  width: 100%;
 }
 
 h2 {
@@ -322,12 +352,56 @@ font-size: 4rem;
 padding-bottom: 30px;
 }
 
+@media (max-width: 1000px) {
+  h2 {
+    font-size: 3rem;
+    padding-bottom: 30px;
+    }
+}
+
+@media (max-width: 750px) {
+  h2 {
+    font-size: 2.5rem;
+    padding-bottom: 30px;
+    }
+}
+
+
+@media (max-width: 650px) {
+  h2 {
+    font-size: 2rem;
+    padding-bottom: 30px;
+    }
+}
+
+@media (max-width: 500px) {
+  h2 {
+    font-size: 1.5rem;
+    padding-bottom: 30px;
+    }
+}
+
+
 h4 {
 font-size: 4rem;
 font-family: 'Roboto', sans-serif;
 color: black;
 padding-bottom: 10px;
 }
+
+@media (max-width: 1000px) {
+  h4 {
+    text-align: center;
+    padding: 40px 0px 0px 0px;
+    }
+}
+
+@media (max-width: 1000px) {
+  h3 {
+    font-size: 1rem;
+    }
+}
+
 
 .stay,.cont {
   font-size: 2rem;
@@ -350,7 +424,7 @@ border-radius: 3px;
   justify-content: space-between;
   }
 
-  @media (max-width: 500px) {
+  @media (max-width: 1000px) {
     .container2 {
       display: block;
       }
@@ -361,6 +435,12 @@ border-radius: 3px;
   justify-content: space-between;
 }
 
+@media (max-width: 1000px) {
+  .container3 {
+    display: block;
+    }
+}
+
 @media (max-width: 500px) {
   .container3 {
     display: block;
@@ -369,14 +449,57 @@ border-radius: 3px;
   
 .team,.exercise {
  padding: 0px 40px 40px 40px;
- max-width: 100%;
- height: auto;
+ width: 45%;
+ height: 100%;
+}
+
+@media (max-width: 1000px) {
+  .team,.exercise {
+  padding: 40px 40px 40px 40px;
+  width: 65%;
+  height: 100%;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 75%;
+   }
 }
 
 .midtext {
   font-family: 'Roboto', sans-serif;
   font-size: 2rem;
   padding: 0px 40px 0px 40px;
+}
+
+@media (max-width: 1350px) {
+  .midtext {
+    font-family: 'Roboto', sans-serif;
+    font-size: 1.8rem;
+    padding: 0px 40px 0px 40px;
+  }
+}
+
+@media (max-width: 1250px) {
+  .midtext {
+    font-family: 'Roboto', sans-serif;
+    font-size: 1.6rem;
+    padding: 0px 40px 0px 40px;
+  }
+}
+
+@media (max-width: 1150px) {
+  .midtext {
+    font-family: 'Roboto', sans-serif;
+    font-size: 1.3rem;
+    padding: 0px 40px 0px 40px;
+  }
+}
+
+h4 {
+font-size: 4rem;
+font-family: 'Roboto', sans-serif;
+color: black;
+padding-bottom: 10px;
 }
 
 h4 {
